<resources>
    <string name="app_name" translatable="false">hello_world</string>
    <string name="title_home">Home</string>
    <string name="title_services">Services</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2" translatable="false">activity_login2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="language_settings">Language</string>
    <string name="action_login_short">Login</string>
    <string name="prompt_username">Username</string>
    <string name="lang_en">🇺🇸 English language</string>
    <string name="lang_kk">🇰🇿 Kazakh language</string>
    <string name="lang_ru">🇷🇺 Russian language</string>
</resources>